# spendtop

./: .gitignore  LICENSE  README.md  demo_v2.cast  pyproject.toml
.github/workflows/: ci.yml
src/spendtop/: cli.py
src/spendtop/connectors/: base.py
src/spendtop/connectors/outcomes/: github.py
src/spendtop/connectors/spend/: anthropic.py  openai.py
src/spendtop/core/: cache.py  config.py  identity.py  metrics.py
src/spendtop/tui/: app.py
src/spendtop/tui/panels/: alerts.py  cost_per_pr.py  daily.py  model_mix.py  spend.py
tests/: test_cache.py  test_metrics.py  test_smoke.py
